Overflow issue

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -122,6 +122,15 @@ section {
 
       &:last-child {
         margin-right: 2rem;
+
+        :after {
+          content: "";
+          display: block;
+          position: absolute;
+          right: -2rem;
+          width: 2rem;
+          height: 1px;
+        }
       }
 
       @include respond(desktop) {
@@ -208,6 +217,15 @@ section {
 
       &:last-child {
         margin-right: 2rem;
+
+        :after {
+          content: "";
+          display: block;
+          position: absolute;
+          right: -2rem;
+          width: 2rem;
+          height: 1px;
+        }
       }
 
       @include respond(desktop) {
